# mininnverifier-maximilian

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml
examples/: demo.ipynb  derivatives.ipynb  mnist_dataset.py  train_mnist.ipynb
src/cli/: __main__.py  eval.py  grad.py  train.py
src/cli/hyperparams/: mnist.json  mnist_mlp.json  mnist_variant2.json
src/minijax/: core.py  eval.py  grad.py  nn.py  serialize.py
src/mininnverifier/minijax/: compute_graph.py  eval.py  serialize.py
tests/common/: circles_shallow_32.mininn  circles_shallow_5.mininn  circles_shallow_64.mininn
tests/milestone1/base/fuzz/: test.json
tests/milestone1/base/unit/common/add/: add_network.mininn
tests/milestone1/base/unit/common/dot/: dot_network.mininn
tests/milestone1/base/unit/common/exp/: exp_network.mininn
tests/milestone1/base/unit/common/expand_dims/: expand_dims_network.mininn
tests/milestone1/base/unit/common/fc_10x32/: fc_10x32_network.mininn
tests/milestone1/base/unit/common/fc_10x4/: fc_10x4_network.mininn
tests/milestone1/base/unit/common/fc_2x4/: fc_2x4_network.mininn
tests/milestone1/base/unit/common/fc_2x64/: fc_2x64_network.mininn
tests/milestone1/base/unit/common/fc_3x16/: fc_3x16_network.mininn
tests/milestone1/base/unit/common/fc_3x64/: fc_3x64_network.mininn
tests/milestone1/base/unit/eval/: generate_network_eval_tests.py  generate_primitive_eval_tests.py
tests/milestone1/base/unit/eval_zeros/: test.json
tests/milestone1/base/unit/grad/: generate_network_grad_tests.py  generate_primitive_grad_tests.py
(+161 files in other folders)
